--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ before_install:
 install:
   - 'npm install'
   - 'if [ -n "${ESLINT_VERSION}" ]; then ./tests/dep-time-travel.sh; fi'
+after_install:
+  - npm run pretest
 
 script:
   - npm run tests-only
